--- a/css/styles.css
+++ b/css/styles.css
@@ -82,18 +82,19 @@ bottom: 300px;
 
 .skill-row {
   width: 50%;
-  margin: 100px auto 100px auto;
+  margin: 100px auto;
   text-align: left;
+  line-height: 2;
 }
 
 .coding {
-  width: 25%;
+  width: 20%;
   float: left;
   margin-right: 30px;
 }
 
 .social-media {
-width: 25%;
+width: 20%;
 float: right;
 margin-left: 30px;
 }
